Add functionality for toolbar hide/show buttons and prevent enter keydown event into doc

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 contenteditable="true"></h1>
         </div>
         <div class="toolbar">
-            <button data-toggle="collapsed"  class="btn icon-plus"></button>
+            <button data-toggle="false"  class="btn icon-plus"></button>
             <div class="btn-group">
                 <button data-tag="p"  class="btn icon-paragraph"></button>
                 <button data-tag="h1" class="btn icon-header">1</button>
