Integrate fontawesome and remove strike button

--- a/index.html
+++ b/index.html
@@ -16,33 +16,28 @@
         <button
           data-state="false"
           data-command="bold"
-          class="btn icon-bold"
-        ></button>
+          class="btn"
+        ><i class="fas fa-bold"></i></button>
         <button
           data-state="false"
           data-command="italic"
-          class="btn icon-italic"
-        >Italic</button>
+          class="btn"
+        ><i class="fas fa-italic"></i></button>
         <button
           data-state="false"
           data-command="underline"
-          class="btn icon-underline"
-        ></button>
-        <button
-          data-state="false"
-          data-command="strike"
-          class="btn icon-strikethrough"
-        ></button>
+          class="btn"
+        ><i class="fas fa-underline"></i></button>
       </div>
       <div id="document-body"></div>
       <div class="toolbar">
         <button data-toggle="false" class="btn icon-plus">+</button>
         <div class="btn-group">
-          <button data-tag="p" class="btn icon-paragraph">P</button>
-          <button data-tag="h1" class="btn icon-header">H1</button>
-          <button data-tag="h2" class="btn icon-header">H2</button>
-          <button data-tag="h3" class="btn icon-header">H3</button>
-          <button data-tag="h4" class="btn icon-header">H4</button>
+          <button data-tag="p" class="btn"><i class="fas fa-paragraph"></i></button>
+          <button data-tag="h1" class="btn"><i class="fas fa-heading"></i>1</button>
+          <button data-tag="h2" class="btn"><i class="fas fa-heading"></i>2</button>
+          <button data-tag="h3" class="btn"><i class="fas fa-heading"></i>3</button>
+          <button data-tag="h4" class="btn"><i class="fas fa-heading"></i>4</button>
         </div>
       </div>
     </div>
